--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+    <!-- menu title -->
     <div class="group-box">
         <div class="menu-bar">
             <img src="./img/im_logo_ transparent.png">
@@ -21,23 +21,25 @@
                 <p>返回主頁</p>
             </button>
         </div>
+
+        <!-- 問題欄位 -->
         <div class="area">
             <!-- 主要詢問的問題 -->
             <div class="big-title">
                 <i class='bx bx-message-dots'></i>
-                <h2 class="title-text">無法登入萬試通</h2>
+                <h2 class="title-text">您遇到什麼問題</h2>
             </div>
             <div class="qustion">
-                <button class="choose" id="all"><i class='bx bx-group'></i>
-                    <p>全館</p>
+                <button class="choose" id="power-failure"><i class='bx bxs-traffic-barrier'></i>
+                    <p>停電相關問題</p>
                 </button>
-                <button class="choose" id="only"><i class='bx bx-user'></i>
-                    <p>少數</p>
+                <button class="choose" id="study123-software"><i class='bx bx-desktop'></i>
+                    <p>學習王無法使用</p>
                 </button>
             </div>
             <!-- 備忘錄 -->
             <div class="memo">
-                <p class="note">建議參考內容 : <span id="note">請開啟萬試通確認</span></p>
+                <p class="note">建議參考內容 : <span id="note">請確認您現在遇到什麼狀況</span></p>
             </div>
         </div>
     </div>
