--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <!-- 備忘錄 -->
             <div class="memo">
-                <p class="note">備註提示 : <span id="note">請確認您現在遇到什麼狀況</span></p>
+                <p class="note">備註提示 : <span id="note">您現在遇到什麼狀況</span></p>
             </div>
         </div>
     </div>
