--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="金鑫教育股份有限公司 資訊部">
+    <meta name="description" content="愛學管 技術支援助理">
+    <meta name="robots" content="noindex">
     <title>金鑫教育資訊部 技術支援</title>
     <link rel="icon" href="./img/mis_logo.png" type="image/x-icon" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
