--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <button class="choose" id="power-failure"><i class='bx bxs-traffic-barrier'></i>
                     <p>停電相關問題</p>
                 </button>
-                <button class="choose" id="study123-software"><i class='bx bx-desktop'></i>
+                <button class="choose" id="study123-software"><i class='bx bx-log-in'></i>
                     <p>學習王無法使用</p>
                 </button>
             </div>
