--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="金鑫教育股份有限公司 資訊部">
     <meta name="description" content="愛學管 技術支援助理">
-    <meta property="og:image:tyoe" content="image/png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="1200">
-    <meta property="og:image" content="https://i.imgur.com/vT9BTJs.png">
-    <meta property="og:url" content="https://eduonemis_afterSales.github.io">
-    <meta name="twitter:image:src" content="https://i.imgur.com/vT9BTJs.png">
-    <meta name="twitter:site" content="github.eduoneMIS">
+    <meta property="og:image" content="./img/mis_logo.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="450">
+    <meta property="og:image:height" content="450">
+    <meta property="og:title" content="愛學館 資訊助手">
+    <meta property="og:description" content="金鑫教育股份有限公司 資訊部 製">
     <title>金鑫教育資訊部 技術支援</title>
     <link rel="icon" href="./img/mis_logo.png" type="image/x-icon" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
