--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="450">
     <meta property="og:image:height" content="450">
-    <meta property="og:title" content="愛學館 資訊助手">
-    <meta property="og:description" content="金鑫教育股份有限公司 資訊部 製">
+    <meta property="og:title" content="愛學館-資訊助手">
+    <meta property="og:description" content="讓我來為您提供快速除錯😁">
     <title>金鑫愛學館技術支援 資訊助手</title>
     <link rel="icon" href="./img/mis_logo.png" type="image/x-icon" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
