--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="金鑫教育股份有限公司 資訊部">
-    <meta name="description" content="愛學管 資訊助手">
+    <meta name="description" content="愛學館-資訊助手">
+    <meta name="author" content="讓我來為您提供快速除錯😁">
     <meta property="og:image" content="./img/mis_logo.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="450">
