index.html inner new span area for 技術支援網站

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <!-- 備忘錄 -->
             <div class="memo">
                 <p class="note"><span id="note"></span></p>
+                <p class="note"><span id="emoji"></span></p>
             </div>
         </div>
     </div>
