--- a/index.html
+++ b/index.html
@@ -47,12 +47,13 @@
             </div>
             <!-- 備忘錄 -->
             <div class="memo">
-                <p class="note"><span id="note"></span></p>
-                <p class="note"><span id="emoji"></span></p>
+                <!-- 透過app.js -->
             </div>
         </div>
+        <footer>
+            <p class="company-footer">Copyright © 2023 金鑫教育股份有限公司 保留一切權利。</p>
+        </footer>
     </div>
-
 </body>
 
 <script src="./App.js"></script>
