改善版權宣告

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             </div>
             <!-- 備忘錄 -->
             <div class="memo">
-                <!-- 透過app.js -->
+                <!-- 透過app.js新增問題 -->
             </div>
         </div>
         <footer>
-            <p class="company-footer">Copyright © 2023 金鑫教育股份有限公司 保留一切權利。</p>
+            <p class="company-footer">Copyright © 2023 EduOne Co.Ltd. All Rights Reserved</p>
         </footer>
     </div>
 </body>
