--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="愛學館-資訊助手">
-    <meta name="author" content="讓我來為您提供快速除錯😁">
+    <meta name="author" content="學習王快速除錯引導">
     <meta property="og:image" content="./img/mis_logo.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="450">
     <meta property="og:image:height" content="450">
     <meta property="og:title" content="愛學館-資訊助手">
-    <meta property="og:description" content="讓我來為您提供快速除錯😁">
+    <meta property="og:description" content="學習王快速除錯引導">
     <title>金鑫愛學館技術支援 資訊助手</title>
     <link rel="icon" href="./img/mis_logo.png" type="image/x-icon" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
