優化界面跑版的問題，並提供良好德使用環境

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <!-- 主要詢問的問題 -->
             <div class="big-title">
                 <i class='bx bx-message-dots'></i>
-                <h2 class="title-text">您遇到什麼問題</h2>
+                <h2 class="title-text">您遇到什麼問題呢</h2>
             </div>
             <div class="qustion">
                 <button class="choose" id="power-failure"><i class='bx bxs-traffic-barrier'></i>
