remove"預覽產品授權",add translate animations, and create youtube videos then kill some bug (demo)

--- a/support-conponent/study123.html
+++ b/support-conponent/study123.html
@@ -35,8 +35,7 @@
     <div class="nextStep"><i class='bx bx-chevrons-down'></i></i></div>
 
     <div class="conponent" id="step2">
-        <div class="title">Step 2 按下主機開機鍵並等待10秒正常開機<span class="info" id="power-light-info"><i
-                    class='bx bx-info-circle'></i>操作上的疑問</span></div>
+        <div class="title">Step 2 按下主機開機鍵並等待10秒正常開機</span></div>
         <div class="ntroduce">確認disk燈號以及lan網孔的燈號皆呈現綠色閃爍</div>
         <div class="imgItems">
             <p class="img-item"><img src="./conponent/開機.webp">
@@ -54,18 +53,19 @@
     <div class="nextStep"><i class='bx bx-chevrons-down'></i></i></div>
 
     <div class="conponent" id="step3">
-        <div class="title">Step 3 確認您館內的NAS IP<span class="info" id="power-light-info"><i
-                    class='bx bx-info-circle'></i>操作上的疑問</span></div>
+        <div class="title">Step 3 確認您館內的NAS IP</span></div>
         <div class="ntroduce">請先下載 " IP找尋助手 "<a class="ntroduce-link"
                 href="https://global.synologydownload.com/download/Utility/Assistant/7.0.3-50049/Windows/synology-assistant-7.0.3-50049.exe?model=DS220%2B&bays=2&dsm_version=7.1.1&build_number=42962"
                 target="_blank">IP找尋助手 ( Synology Assistant_檔案大小: 10.2MB ) 下載</a></div>
         <div class="imgItems">
-            <p class="img-item"><img src="./conponent/IP搜尋.webp">
+            <p class="img-item"><a href="https://youtu.be/aqv1bY7lNnI" target="_blank" class="webp-Youtube-Link"><img
+                        src="./conponent/IP搜尋.webp"></a>
                 <span class="title">使用Assistant找尋您的IP</span>
                 1. 打開Synology Assistant<br>
                 2. 搜尋找到NAS主機名稱為「Study123」的NAS IP
             </p>
-            <p class="img-item"><img src="./conponent/開啟容器.webp">
+            <p class="img-item"><a href="https://youtu.be/sFu5Ga1GgTY" target="_blank" class="webp-Youtube-Link"><img
+                        src="./conponent/開啟容器.webp"></a>
                 <span class="title">開啟NAS管理系統中的容器</span>
                 1. 將您的NAS IP輸入到瀏覽器中<br>
                 2. 登入NAS控制頁面(帳號密碼若忘記請與資訊部索取)<br>
@@ -77,28 +77,30 @@
     <div class="nextStep"><i class='bx bx-chevrons-down'></i></i></div>
 
     <div class="conponent" id="step4">
-        <div class="title">Step 4 安裝軟體<span class="info" id="power-light-info"><i
-                    class='bx bx-info-circle'></i>操作上的疑問</span></div>
+        <div class="title">Step 4 安裝軟體</span></div>
         <div class="ntroduce">請先下載 " Study123原始檔案 壓縮包 "<a class="ntroduce-link" href="https://reurl.cc/X5x69e"
                 target="_blank">Study123原始檔案 壓縮包 ( Study123壓縮包_檔案大小: 809MB ) 下載</a><a class="ntroduce-link"
                 href="https://tw.bandisoft.com/bandizip/" target="_blank">免費好用的解壓縮工具 (
                 BandZip_檔案大小: 6.89MB ) 下載</a>
         </div>
         <div class="imgItems">
-            <p class="img-item"><img src="./conponent/解壓縮.webp">
+            <p class="img-item"><a href="https://youtu.be/dHpuw9ItrlE" target="_blank" class="webp-Youtube-Link"><img
+                        src="./conponent/解壓縮.webp"></a>
                 <span class="title">解壓縮軟體包</span>
                 1. 將下載下來的Study123壓縮包雙擊點開<br>
                 2. 將Study123資料夾拖曳至桌面<br>
                 3. 等待解壓縮
             </p>
-            <p class="img-item"><img src="./conponent/configIP.webp">
+            <p class="img-item"><a href="https://youtu.be/0OebNx3xZYw" target="_blank" class="webp-Youtube-Link"><img
+                        src="./conponent/configIP.webp"></a>
                 <span class="title">修改config.txt的IP</span>
                 1. 進入 Study123 > Resorce > config.txt 雙擊點開<br>
                 2. 將您NAS的IP輸入到至框選範圍<br>
                 3. 儲存並離開config.txt<br>
 
             </p>
-            <p class="img-item"><img src="./conponent/建立捷徑.webp">
+            <p class="img-item"><a href="https://youtu.be/tdnXiauZfRU" target="_blank" class="webp-Youtube-Link"><img
+                        src="./conponent/建立捷徑.webp"></a>
                 <span class="title">在桌面建立萬試通捷徑</span>
                 1. 進入 Study123 > Release<br>
                 2. 找到 StudyCheckVersionII.exe 並「右鍵」點擊 選擇「傳送到」>「桌面(建立捷徑)」<br>
@@ -110,19 +112,20 @@
     <div class="nextStep"><i class='bx bx-chevrons-down'></i></i></div>
 
     <div class="conponent" id="step5">
-        <div class="title">Step 5 補教系統 新增/檢視 學員帳號<span class="info" id="power-light-info"><i
-                    class='bx bx-info-circle'></i>操作上的疑問</span>
+        <div class="title">Step 5 補教系統 新增/檢視 學員帳號</span>
         </div>
         <div class="ntroduce">請您先依照Step3確認您的NAS IP ( 若已經知道您的IP即可略過確認IP的步驟 ) <a class="ntroduce-link" href="#step3">Step3
                 確認您的 Study123 NAS IP</a>
         </div>
         <div class="imgItems">
-            <p class="img-item"><img src="./conponent/登入補教系統.webp">
+            <p class="img-item"><a href="https://youtu.be/bogJYDmVshI" target="_blank" class="webp-Youtube-Link"><img
+                        src="./conponent/登入補教系統.webp"></a>
                 <span class="title">登入補教系統</span>
                 1. 將您的NAS IP輸入至瀏覽器中並在最後加上「:8002」，例如 192.168.0.9:8002<br>
                 2. 登入補教系統 (帳號密碼您若忘記請與資訊部人員索取)
             </p>
-            <p class="img-item"><img src="./conponent/補教新增帳號.webp">
+            <p class="img-item"><a href="https://youtu.be/f3KObkTL-RU" target="_blank" class="webp-Youtube-Link"><img
+                        src="./conponent/補教新增帳號.webp"></a>
                 <span class="title">新增 - 學員帳號</span>
                 1. 點選左上角「人員管理」 > 「學員人員管理」<br>
                 2. 滾輪滑至右面最底部，找到「新增學生帳號」並點擊<br>
@@ -131,33 +134,13 @@
                 <br><br>特別注意:「生日」欄位預設值1994 5 15不代表已填入，您需要再次填入您自己設定的生日
 
             </p>
-            <p class="img-item"><img src="./conponent/補教檢視帳號.webp">
+            <p class="img-item"><a href="https://youtu.be/d1ZrSxhL6lE" target="_blank" class="webp-Youtube-Link"><img
+                        src="./conponent/補教檢視帳號.webp"></a>
                 <span class="title">檢視 - 學員帳號</span>
                 1. 點選左上角「人員管理」 > 「學員人員管理」<br>
                 2. 找到您需要登入的帳號，例如編號50號<br>
                 3. 點選該帳號欄位右側的「編輯資訊」進入編輯頁面<br>
                 4. 「行動電話」欄位則代表該帳號的密碼
-            </p>
-        </div>
-    </div>
-
-    <div class="nextStep"><i class='bx bx-chevrons-down'></i></i></div>
-
-    <div class="conponent">
-        <div class="title" id="step6">Step 6 預覽自己的產品授權狀態<span class="info" id="power-light-info"><i
-                    class='bx bx-info-circle'></i>操作上的疑問</span></div>
-        <div class="ntroduce">
-        </div>
-        <div class="imgItems">
-            <p class="img-item"><img src="">
-                <span class="title">登入補教系統</span>
-                1. 將您的NAS IP輸入至瀏覽器中並在最後加上「:8002」，例如 192.168.0.9:8002<br>
-                2. 登入補教系統 (帳號密碼您若忘記請與資訊部人員索取)
-            </p>
-            <p class="img-item"><img src="">
-                <span class="title">進入產品管理頁面</span>
-                1. 點選左上角「產品管理」 > 「產品列表」<br>
-                2. 即可確認您的「狀態」欄位的產品授權狀態<br>
             </p>
         </div>
     </div>
