--- a/support-conponent/im-support.html
+++ b/support-conponent/im-support.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="愛學館-官方技術支援">
   <meta name="author" content="學習王快速除錯">
-  <meta property="og:image" content="./img/mis_logo.png">
+  <meta property="og:image" content="../img/mis_logo.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="450">
   <meta property="og:image:height" content="450">
