將study123.html的titleBar固定制螢幕最上層，以及消除一些害蟲

--- a/support-conponent/study123.html
+++ b/support-conponent/study123.html
@@ -95,7 +95,7 @@
                         src="./conponent/configIP.webp"></a>
                 <span class="title">修改config.txt的IP</span>
                 1. 進入 Study123 > Resorce > config.txt 雙擊點開<br>
-                2. 將您NAS的IP輸入到至框選範圍<br>
+                2. 將您NAS的IP輸入影片中的範圍<br>
                 3. 儲存並離開config.txt<br>
 
             </p>
