--- a/support-conponent/im-support.html
+++ b/support-conponent/im-support.html
@@ -22,50 +22,44 @@
   <div class="title-bar">
     <h3 class="page-title">金鑫教育愛學館 技術支援首頁</h3>
     <foorter class="footer-bar">
-      <a target="_blank" href="../index.html"><i class="bx bx-compass" target="_blank"></i>資訊助手</a>
-      <a target="_blank" href="https://hackmd.io/@eduone-imstudy-MIS/rJHyKhJ6s" target="_blank"><i
-          class="bx bx-receipt"></i>回到舊版</a>
+      <a href="../index.html"><i class="bx bx-compass"></i>資訊助手</a>
+      <a href="https://hackmd.io/@eduone-imstudy-MIS/rJHyKhJ6s"><i class="bx bx-receipt"></i>回到舊版</a>
     </foorter>
   </div>
   <div class="conponent">
     <div class="title">學習王</div>
     <div class="items">
-      <a target="_blank" href="./study123.html#step1" class="item-card"><i class="bx bx-power-off"></i>NAS 主機開關機
+      <a href="./study123.html#step1" class="item-card"><i class="bx bx-power-off"></i>NAS 主機開關機
         <div class="ntroduce">
           您必須將NAS主開機才能使用學習王
         </div>
       </a>
-      <a target="_blank" href="./study123.html#step2" class="item-card"><i class="bx bx-link"></i>獲取NAS IP
+      <a href="./study123.html#step3" class="item-card"><i class="bx bx-link"></i>獲取NAS IP
         <div class="ntroduce">
           確認您的NAS IP進行萬試通設定
         </div>
       </a>
-      <a target="_blank" href="./study123.html#step3" class="item-card"><i class="bx bxl-docker"></i>容器開啟或關閉
+      <a href="./study123.html#step3" class="item-card"><i class="bx bxl-docker"></i>容器開啟或關閉
         <div class="ntroduce">
           開啟容器萬事通才有資料庫能儲存學生帳號以及抓取學習王影片
         </div>
       </a>
-      <a target="_blank" href="./study123.html#step5" class="item-card"><i class="bx bx-food-menu"></i>進入補教系統
+      <a href="./study123.html#step5" class="item-card"><i class="bx bx-food-menu"></i>進入補教系統
         <div class="ntroduce">
           進入補教系統新增或檢視學員帳號
         </div>
       </a>
-      <a target="_blank" href="./study123.html#step5" class="item-card"><i class="bx bx-user"></i>新增學員帳號
+      <a href="./study123.html#step5" class="item-card"><i class="bx bx-user"></i>新增學員帳號
         <div class="ntroduce">
           新增學生帳號用來登入萬試通系統
         </div>
       </a>
-      <a target="_blank" href="./study123.html#step6" class="item-card"><i class="bx bx-check-circle"></i>預覽自己的授權狀態
+      <a href="./study123.html#step4" class="item-card"><i class="bx bx-download"></i>重新安裝新軟體
         <div class="ntroduce">
-          了解及確認您產品的授權狀態
+          當您的軟體被學生刪除，或少數幾台電腦無法使用時可以透過該教學進行重新安裝
         </div>
       </a>
-      <a target="_blank" href="./study123.html#step4" class="item-card"><i class="bx bx-download"></i>重新安裝新軟體
-        <div class="ntroduce">
-          當您的軟體被學生刪除，或者試少數幾台電腦無法使用時可以透過該叫學進行重新安裝
-        </div>
-      </a>
-      <a target="_blank" href="./study123.html#step4" class="item-card"><i class="bx bx-info-circle"></i>config.txt
+      <a href="./study123.html#step4" class="item-card"><i class="bx bx-info-circle"></i>config.txt
         的IP更換
         <div class="ntroduce">
           您的萬試通下載下來之後沒有改這邊的IP依然無法正常登入
@@ -77,13 +71,13 @@
   <div class="conponent">
     <div class="title">客服遠端</div>
     <div class="items">
-      <a target="_blank" href="https://www.study123.com.tw/ec99/rwd1018/category-classroom.asp?category_id=99"
-        class="item-card"><i class="bx bx-share-alt"></i>學習王 TeamViewr
+      <a href="https://www.study123.com.tw/ec99/rwd1018/category-classroom.asp?category_id=99" class="item-card"><i
+          class="bx bx-share-alt"></i>學習王 TeamViewr
         <div class="ntroduce">
           提供學習王工程師遠端協助您除錯
         </div>
       </a>
-      <a target="_blank" href="https://anydesk.com/zh-tw" class="item-card"><i class="bx bx-share-alt"></i>金鑫 AnyDesk
+      <a href="https://anydesk.com/zh-tw" class="item-card"><i class="bx bx-share-alt"></i>金鑫 AnyDesk
         <div class="ntroduce">
           提供金鑫資訊部遠端協助您除錯
         </div>
@@ -93,39 +87,25 @@
   <div class="conponent">
     <div class="title">愛學館 最低設備要求</div>
     <div class="items">
-      <div class="item-card" id="no-link">
-        <div class="card-title"><i class="bx bx-desktop"></i>電腦設備</div>
-        <div class="ntroduce">
-          CPU處理器 - 12th intel i3-12100以上。<br />
-          RAM記憶體 - DDR4 16G以上。<br />
-          Storage儲存空間 - 256G以上。<br />
-          Power供電系統 - 500W以上。
-        </div>
-      </div>
-      <div class="item-card" id="no-link">
-        <div class="card-title"><i class="bx bx-planet"></i>網路設備架構</div>
-        <div class="ntroduce">
-          1. Modem數據機(電信供應商) - 中華電信 下載300 / 上傳100 以上。
-          <br />
-          2. Router路由器 - ASUS RT-AX1800S (最低傳輸速度1000M) 以上。<br />
-          3. Switch交換機 - Zyxel GS1900
-          (最低傳輸速度1000M須具備LACP練錄聚合功能) 以上。<br />
-          4. 網路線 - Cat-6以上。
-        </div>
-      </div>
+      <a href="https://drive.google.com/file/d/11AC6z626otxyhcT71klO05AxS31Sp3ds/view?usp=sharing" class="item-card"><i
+          class="bx bx-desktop"></i>愛學館 - 最低 電腦設備規格
+        <div class="ntroduce">當您需要採購電腦時 請點擊我</div>
+      </a>
+      <a href="https://drive.google.com/file/d/11AC6z626otxyhcT71klO05AxS31Sp3ds/view?usp=sharing" class="item-card"><i
+          class="bx bx-planet"></i>愛學館 - 最低網路設備規格
+        <div class="ntroduce">當您需要更動網路架構時 請點擊我</div>
+      </a>
     </div>
   </div>
 
   <div class="conponent">
     <div class="title">電腦相關</div>
     <div class="items">
-      <a target="_blank"
-        href="https://www.youtube.com/watch?v=UgidvSCM-yM&list=PLNZuxJX9ahhq5ulW13Eklw2n-J8F_w41Z&index=2&ab_channel=%E9%87%91%E9%91%ABMIS%E8%B3%87%E8%A8%8A%E9%83%A8"
+      <a href="https://www.youtube.com/watch?v=UgidvSCM-yM&list=PLNZuxJX9ahhq5ulW13Eklw2n-J8F_w41Z&index=2&ab_channel=%E9%87%91%E9%91%ABMIS%E8%B3%87%E8%A8%8A%E9%83%A8"
         class="item-card"><i class="bx bx-desktop"></i>windows10檢視方式
         <div class="ntroduce">當您需要了解電腦規格的時候的確認步驟</div>
       </a>
-      <a target="_blank"
-        href="https://www.youtube.com/watch?v=Kxn2W3BakgM&list=PLNZuxJX9ahhq5ulW13Eklw2n-J8F_w41Z&index=3&ab_channel=%E9%87%91%E9%91%ABMIS%E8%B3%87%E8%A8%8A%E9%83%A8"
+      <a href="https://www.youtube.com/watch?v=Kxn2W3BakgM&list=PLNZuxJX9ahhq5ulW13Eklw2n-J8F_w41Z&index=3&ab_channel=%E9%87%91%E9%91%ABMIS%E8%B3%87%E8%A8%8A%E9%83%A8"
         class="item-card"><i class="bx bx-desktop"></i>windows11檢視方式
         <div class="ntroduce">當您需要了解電腦規格的時候的確認步驟</div>
       </a>
