細分了一些分類，以及訂選選單在螢幕最上層

--- a/support-conponent/im-support.html
+++ b/support-conponent/im-support.html
@@ -27,7 +27,15 @@
     </foorter>
   </div>
   <div class="conponent">
-    <div class="title">學習王</div>
+    <div class="title">學習王設定流程</div>
+    <div class="items">
+      <a href="./study123.html" class="item-card"><i class='bx bx-cog'></i>設定流程
+        <div class="ntroduce">
+          所有學習王的設定流程
+        </div>
+      </a>
+    </div>
+    <div class="title">學習王 細項教學</div>
     <div class="items">
       <a href="./study123.html#step1" class="item-card"><i class="bx bx-power-off"></i>NAS 主機開關機
         <div class="ntroduce">
