--- a/support-conponent/study123.html
+++ b/support-conponent/study123.html
@@ -27,7 +27,7 @@
     </div>
     <div class="conponent" id="step1">
         <div class="title">Step 1 請前往機房請確認您的電力狀態以及插座是否穩妥 ( 確認正常可跳過 )</div>
-        <div class="ntroduce">您可以確認當前須預的目前供電狀態以及停電公告<a class="ntroduce-link"
+        <div class="ntroduce">您可以確認當前區域的目前供電狀態以及停電公告<a class="ntroduce-link"
                 href="https://nds.taipower.com.tw/ndsWeb/ndft112.aspx" target="_blank">台灣電力公司供電查詢</a>
         </div>
     </div>
