--- a/support-conponent/im-support.html
+++ b/support-conponent/im-support.html
@@ -16,6 +16,7 @@
   <title>金鑫教育愛學館 技術支援首頁</title>
   <link rel="icon" href="../img/mis_logo.png" type="image/x-icon" />
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="./im-support.css" />
 </head>
 
 <body>
@@ -74,6 +75,17 @@
         </div>
       </a>
     </div>
+    <div class="title">愛學館 最低設備要求</div>
+    <div class="items">
+      <a href="https://drive.google.com/file/d/11AC6z626otxyhcT71klO05AxS31Sp3ds/view?usp=sharing" class="item-card"><i
+          class="bx bx-desktop"></i>愛學館 - 最低 電腦設備規格
+        <div class="ntroduce">當您需要採購電腦時 請點擊我</div>
+      </a>
+      <a href="https://drive.google.com/file/d/11AC6z626otxyhcT71klO05AxS31Sp3ds/view?usp=sharing" class="item-card"><i
+          class="bx bx-planet"></i>愛學館 - 最低網路設備規格
+        <div class="ntroduce">當您需要更動網路架構時 請點擊我</div>
+      </a>
+    </div>
   </div>
 
   <div class="conponent">
@@ -92,22 +104,9 @@
       </a>
     </div>
   </div>
-  <div class="conponent">
-    <div class="title">愛學館 最低設備要求</div>
-    <div class="items">
-      <a href="https://drive.google.com/file/d/11AC6z626otxyhcT71klO05AxS31Sp3ds/view?usp=sharing" class="item-card"><i
-          class="bx bx-desktop"></i>愛學館 - 最低 電腦設備規格
-        <div class="ntroduce">當您需要採購電腦時 請點擊我</div>
-      </a>
-      <a href="https://drive.google.com/file/d/11AC6z626otxyhcT71klO05AxS31Sp3ds/view?usp=sharing" class="item-card"><i
-          class="bx bx-planet"></i>愛學館 - 最低網路設備規格
-        <div class="ntroduce">當您需要更動網路架構時 請點擊我</div>
-      </a>
-    </div>
-  </div>
 
   <div class="conponent">
-    <div class="title">電腦相關</div>
+    <div class="title">其他</div>
     <div class="items">
       <a href="https://www.youtube.com/watch?v=UgidvSCM-yM&list=PLNZuxJX9ahhq5ulW13Eklw2n-J8F_w41Z&index=2&ab_channel=%E9%87%91%E9%91%ABMIS%E8%B3%87%E8%A8%8A%E9%83%A8"
         class="item-card"><i class="bx bx-desktop"></i>windows10檢視方式
@@ -120,6 +119,5 @@
     </div>
   </div>
 </body>
-<link rel="stylesheet" href="./im-support.css" />
 
 </html>
