add how to turn nas power off

--- a/support-conponent/im-support.html
+++ b/support-conponent/im-support.html
@@ -24,7 +24,7 @@
     <h3 class="page-title">金鑫教育愛學館 技術支援首頁</h3>
     <foorter class="footer-bar">
       <a href="../index.html"><i class="bx bx-compass"></i>資訊助手</a>
-      <a href="https://hackmd.io/@eduone-imstudy-MIS/rJHyKhJ6s"><i class="bx bx-receipt"></i>回到舊版</a>
+      <a href="https://hackmd.io/@eduone-imstudy-MIS/rJHyKhJ6s"><i class="bx bx-receipt"></i>回到舊版(停更)</a>
     </foorter>
   </div>
   <div class="conponent">
@@ -72,6 +72,11 @@
         的IP更換
         <div class="ntroduce">
           您的萬試通下載下來之後沒有改這邊的IP依然無法正常登入
+        </div>
+      </a>
+      <a href="./study123.html#overlist01" class="item-card"><i class='bx bx-power-off'></i>遇到停電需要關機
+        <div class="ntroduce">
+          當您收到停電通知，您需要關閉NAS主機避免資料庫損毀
         </div>
       </a>
     </div>
