--- a/support-conponent/im-support.html
+++ b/support-conponent/im-support.html
@@ -38,7 +38,7 @@
     </div>
     <div class="title">學習王 細項教學</div>
     <div class="items">
-      <a href="./study123.html#step1" class="item-card"><i class="bx bx-power-off"></i>NAS 主機開關機
+      <a href="./study123.html#step1" class="item-card"><i class="bx bx-power-off"></i>NAS 主機開機
         <div class="ntroduce">
           您必須將NAS主開機才能使用學習王
         </div>
