--- a/support-conponent/im-support.html
+++ b/support-conponent/im-support.html
@@ -21,7 +21,10 @@
 
 <body>
   <div class="title-bar">
-    <h3 class="page-title">金鑫教育愛學館 技術支援首頁</h3>
+    <div class="name-area">
+      <img src="../img/im_logo_ transparent.png" class="logo">
+      <h3 class="page-title"> 技術支援首頁</h3>
+    </div>
     <foorter class="footer-bar">
       <a href="../index.html"><i class="bx bx-compass"></i>資訊助手</a>
       <a href="https://hackmd.io/@eduone-imstudy-MIS/rJHyKhJ6s"><i class="bx bx-receipt"></i>回到舊版</a>
