--- a/support-conponent/study123.html
+++ b/support-conponent/study123.html
@@ -38,15 +38,23 @@
         <div class="title">Step 2 按下主機開機鍵並等待10秒正常開機</span></div>
         <div class="ntroduce">確認disk燈號以及lan網孔的燈號皆呈現綠色閃爍</div>
         <div class="imgItems">
-            <p class="img-item"><img src="./conponent/開機.webp">
-                <span class="title">開機</span>
-                1. 按下開機鍵並等待10~20秒左右
-            </p>
-            <p class="img-item"><img src="./conponent/燈號(正常).webp">
-                <span class="title">確認燈號</span>
-                1. 聽到嗶聲<br>
-                2. STATUS, LAN1/LAN2, DISK1, DISK2 都有亮起綠色燈號，代表已正常開機
-            </p>
+            <div class="img-item">
+                <p><img src="./conponent/開機.webp">
+                    <span class="title">開機</span>
+                </p>
+                <ol class="text-items">
+                    <li>按下開機鍵並等待10~20秒左右</li>
+                </ol>
+            </div>
+            <div class="img-item">
+                <p><img src="./conponent/燈號(正常).webp">
+                    <span class="title">確認燈號</span>
+                </p>
+                <ol class="text-items">
+                    <li>聽到嗶聲</li>
+                    <li>STATUS, LAN1/LAN2, DISK1, DISK2 都有亮起綠色燈號，代表已正常開機</li>
+                </ol>
+            </div>
         </div>
     </div>
 
@@ -58,19 +66,28 @@
                 href="https://global.synologydownload.com/download/Utility/Assistant/7.0.3-50049/Windows/synology-assistant-7.0.3-50049.exe?model=DS220%2B&bays=2&dsm_version=7.1.1&build_number=42962"
                 target="_blank">IP找尋助手 ( Synology Assistant_檔案大小: 10.2MB ) 下載</a></div>
         <div class="imgItems">
-            <p class="img-item"><a href="https://youtu.be/aqv1bY7lNnI" target="_blank" class="webp-Youtube-Link"><img
-                        src="./conponent/IP搜尋.webp"></a>
-                <span class="title">使用Assistant找尋您的IP</span>
-                1. 打開Synology Assistant<br>
-                2. 搜尋找到NAS主機名稱為「Study123」的NAS IP
-            </p>
-            <p class="img-item"><a href="https://youtu.be/sFu5Ga1GgTY" target="_blank" class="webp-Youtube-Link"><img
-                        src="./conponent/開啟容器.webp"></a>
-                <span class="title">開啟NAS管理系統中的容器</span>
-                1. 將您的NAS IP輸入到瀏覽器中<br>
-                2. 登入NAS控制頁面(帳號密碼若忘記請與資訊部索取)<br>
-                3. 進入docker>容器>開啟名為hls-ubuntu容器
-            </p>
+            <div class="img-item">
+                <p><a href="https://youtu.be/aqv1bY7lNnI" target="_blank" class="webp-Youtube-Link"><img
+                            src="./conponent/IP搜尋.webp"></a>
+                    <span class="title">使用Assistant找尋您的IP</span>
+                </p>
+                <ol class="text-items">
+                    <li>打開Synology Assistant</li>
+                    <li>搜尋找到NAS主機名稱為「Study123」的NAS IP</li>
+                </ol>
+            </div>
+
+            <div class="img-item">
+                <p><a href="https://youtu.be/sFu5Ga1GgTY" target="_blank" class="webp-Youtube-Link"><img
+                            src="./conponent/開啟容器.webp"></a>
+                    <span class="title">開啟NAS管理系統中的容器</span>
+                </p>
+                <ol class="text-items">
+                    <li>將您的NAS IP輸入到瀏覽器中</li>
+                    <li>登入NAS控制頁面(帳號密碼若忘記請與資訊部索取)</li>
+                    <li>進入docker>容器>開啟名為hls-ubuntu容器</li>
+                </ol>
+            </div>
         </div>
     </div>
 
@@ -84,28 +101,41 @@
                 BandZip_檔案大小: 6.89MB ) 下載</a>
         </div>
         <div class="imgItems">
-            <p class="img-item"><a href="https://youtu.be/dHpuw9ItrlE" target="_blank" class="webp-Youtube-Link"><img
-                        src="./conponent/解壓縮.webp"></a>
-                <span class="title">解壓縮軟體包</span>
-                1. 將下載下來的Study123壓縮包雙擊點開<br>
-                2. 將Study123資料夾拖曳至桌面<br>
-                3. 等待解壓縮
-            </p>
-            <p class="img-item"><a href="https://youtu.be/0OebNx3xZYw" target="_blank" class="webp-Youtube-Link"><img
-                        src="./conponent/configIP.webp"></a>
-                <span class="title">修改config.txt的IP</span>
-                1. 進入 Study123 > Resorce > config.txt 雙擊點開<br>
-                2. 將您NAS的IP輸入影片中的範圍<br>
-                3. 儲存並離開config.txt<br>
+            <div class="img-item">
+                <p><a href="https://youtu.be/dHpuw9ItrlE" target="_blank" class="webp-Youtube-Link"><img
+                            src="./conponent/解壓縮.webp"></a>
+                    <span class="title">解壓縮軟體包</span>
+                </p>
+                <ol class="text-items">
+                    <li>將下載下來的Study123壓縮包雙擊點開</li>
+                    <li>將Study123資料夾拖曳至桌面</li>
+                    <li>等待解壓縮</li>
+                </ol>
+            </div>
 
-            </p>
-            <p class="img-item"><a href="https://youtu.be/tdnXiauZfRU" target="_blank" class="webp-Youtube-Link"><img
-                        src="./conponent/建立捷徑.webp"></a>
-                <span class="title">在桌面建立萬試通捷徑</span>
-                1. 進入 Study123 > Release<br>
-                2. 找到 StudyCheckVersionII.exe 並「右鍵」點擊 選擇「傳送到」>「桌面(建立捷徑)」<br>
-                3. 即可使用萬試通
-            </p>
+            <div class="img-item">
+                <p><a href="https://youtu.be/0OebNx3xZYw" target="_blank" class="webp-Youtube-Link"><img
+                            src="./conponent/configIP.webp"></a>
+                    <span class="title">修改config.txt的IP</span>
+                </p>
+                <ol class="text-items">
+                    <li>進入 Study123 > Resorce > config.txt 雙擊點開</li>
+                    <li>將您NAS的IP輸入影片中的範圍</li>
+                    <li>儲存並離開config.txt</li>
+                </ol>
+            </div>
+
+            <div class="img-item">
+                <p><a href="https://youtu.be/tdnXiauZfRU" target="_blank" class="webp-Youtube-Link"><img
+                            src="./conponent/建立捷徑.webp"></a>
+                    <span class="title">在桌面建立萬試通捷徑</span>
+                </p>
+                <ol class="text-items">
+                    <li>進入 Study123 > Release</li>
+                    <li>找到 StudyCheckVersionII.exe 並「右鍵」點擊 選擇「傳送到」>「桌面(建立捷徑)」</li>
+                    <li>即可使用萬試通</li>
+                </ol>
+            </div>
         </div>
     </div>
 
@@ -118,33 +148,49 @@
                 確認您的 Study123 NAS IP</a>
         </div>
         <div class="imgItems">
-            <p class="img-item"><a href="https://youtu.be/bogJYDmVshI" target="_blank" class="webp-Youtube-Link"><img
-                        src="./conponent/登入補教系統.webp"></a>
-                <span class="title">登入補教系統</span>
-                1. 將您的NAS IP輸入至瀏覽器中並在最後加上「:8002」，例如 192.168.0.9:8002<br>
-                2. 登入補教系統 (帳號密碼您若忘記請與資訊部人員索取)
-            </p>
-            <p class="img-item"><a href="https://youtu.be/f3KObkTL-RU" target="_blank" class="webp-Youtube-Link"><img
-                        src="./conponent/補教新增帳號.webp"></a>
-                <span class="title">新增 - 學員帳號</span>
-                1. 點選左上角「人員管理」 > 「學員人員管理」<br>
-                2. 滾輪滑至右面最底部，找到「新增學生帳號」並點擊<br>
-                3. 所有欄位皆須填入相應要求的內容<br>
-                4. 「行動電話」為您登入萬試通的密碼，請勿輸入超過10位數字 ( 建議您使用十個 1 )
-                <br><br>特別注意:「生日」欄位預設值1994 5 15不代表已填入，您需要再次填入您自己設定的生日
+            <div class="img-item">
+                <p><a href="https://youtu.be/bogJYDmVshI" target="_blank" class="webp-Youtube-Link"><img
+                            src="./conponent/登入補教系統.webp"></a>
+                    <span class="title">登入補教系統</span>
+                </p>
+                <ol class="text-items">
+                    <li>將您的NAS IP輸入至瀏覽器中並在最後加上「:8002」，例如 192.168.0.9:8002</li>
+                    <li>登入補教系統 (帳號密碼您若忘記請與資訊部人員索取)</li>
+                </ol>
+            </div>
 
-            </p>
-            <p class="img-item"><a href="https://youtu.be/d1ZrSxhL6lE" target="_blank" class="webp-Youtube-Link"><img
-                        src="./conponent/補教檢視帳號.webp"></a>
-                <span class="title">檢視 - 學員帳號</span>
-                1. 點選左上角「人員管理」 > 「學員人員管理」<br>
-                2. 找到您需要登入的帳號，例如編號50號<br>
-                3. 點選該帳號欄位右側的「編輯資訊」進入編輯頁面<br>
-                4. 「行動電話」欄位則代表該帳號的密碼
-            </p>
+            <div class="img-item">
+                <p><a href="https://youtu.be/f3KObkTL-RU" target="_blank" class="webp-Youtube-Link"><img
+                            src="./conponent/補教新增帳號.webp"></a>
+                    <span class="title">新增 - 學員帳號</span>
+                </p>
+                <ol class="text-items">
+                    <li>點選左上角「人員管理」 > 「學員人員管理」</li>
+                    <li>滾輪滑至右面最底部，找到「新增學生帳號」並點擊</li>
+                    <li>所有欄位皆須填入相應要求的內容</li>
+                    <li>「行動電話」為您登入萬試通的密碼，請勿輸入超過10位數字 ( 建議您使用十個 1 )</li>
+                </ol><br>特別注意:「生日」欄位預設值1994 5 15不代表已填入，您需要再次填入您自己設定的生日
+            </div>
+
+            <div class="img-item">
+                <p><a href="https://youtu.be/d1ZrSxhL6lE" target="_blank" class="webp-Youtube-Link"><img
+                            src="./conponent/補教檢視帳號.webp"></a>
+                    <span class="title">檢視 - 學員帳號</span>
+                </p>
+                <ol class="text-items">
+                    <li>點選左上角「人員管理」 > 「學員人員管理」</li>
+                    <li>找到您需要登入的帳號，例如編號50號</li>
+                    <li>點選該帳號欄位右側的「編輯資訊」進入編輯頁面</li>
+                    <li>「行動電話」欄位則代表該帳號的密碼</li>
+                </ol>
+            </div>
         </div>
     </div>
+
+
     <div class="nextStep"><i class='bx bx-chevrons-down'></i></i></div>
+
+
 
     <div class="conponent" id="overlist01">
         <div class="title">其他: 遇到停電需要關機</span></div>
@@ -153,26 +199,38 @@
                 href="https://global.synologydownload.com/download/Utility/Assistant/7.0.3-50049/Windows/synology-assistant-7.0.3-50049.exe?model=DS220%2B&bays=2&dsm_version=7.1.1&build_number=42962"
                 target="_blank">IP找尋助手 ( Synology Assistant_檔案大小: 10.2MB ) 下載</a></div>
         <div class="imgItems">
-            <p class="img-item"><a href="https://youtu.be/aqv1bY7lNnI" target="_blank" class="webp-Youtube-Link"><img
-                        src="./conponent/IP搜尋.webp"></a>
-                <span class="title">使用Assistant找尋您的IP</span>
-                1. 打開Synology Assistant<br>
-                2. 搜尋找到NAS主機名稱為「Study123」的NAS IP
-            </p>
-            <p class="img-item"><a href="https://youtu.be/sFu5Ga1GgTY" target="_blank" class="webp-Youtube-Link"><img
-                        src="./conponent/開啟容器.webp"></a>
-                <span class="title">關閉NAS管理系統中的容器</span>
-                1. 將您的NAS IP輸入到瀏覽器中<br>
-                2. 登入NAS控制頁面(帳號密碼若忘記請與資訊部索取)<br>
-                3. 進入docker>容器>關閉名為hls-ubuntu容器<br>
-                4. 確保名為hls-ubuntu容器開關呈現灰色
-            </p>
-            <p class="img-item"><img src="./conponent/關機.webp">
-                <span class="title">關機</span>
-                1. 請確認您已經關閉容器<br>
-                2. 長按電源鍵大約10~15秒左右直至燈號熄滅<br>
-                3. 確認所有燈號皆已熄滅
-            </p>
+            <div class="img-item">
+                <p><a href="https://youtu.be/aqv1bY7lNnI" target="_blank" class="webp-Youtube-Link"><img
+                            src="./conponent/IP搜尋.webp"></a>
+                    <span class="title">使用Assistant找尋您的IP</span>
+                </p>
+                <ol class="text-items">
+                    <li>打開Synology Assistant</li>
+                    <li>搜尋找到NAS主機名稱為「Study123」的NAS IP</li>
+                </ol>
+            </div>
+            <div class="img-item">
+                <p><a href="https://youtu.be/sFu5Ga1GgTY" target="_blank" class="webp-Youtube-Link"><img
+                            src="./conponent/開啟容器.webp"></a>
+                    <span class="title">關閉NAS管理系統中的容器</span>
+                </p>
+                <ol class="text-items">
+                    <li>將您的NAS IP輸入到瀏覽器中</li>
+                    <li>登入NAS控制頁面(帳號密碼若忘記請與資訊部索取)</li>
+                    <li>進入docker>容器>關閉名為hls-ubuntu容器</li>
+                    <li>確保名為hls-ubuntu容器開關呈現灰色</li>
+                </ol>
+            </div>
+            <div class="img-item">
+                <p><img src="./conponent/關機.webp">
+                    <span class="title">關機</span>
+                </p>
+                <ol class="text-items">
+                    <li>請確認您已經關閉容器</li>
+                    <li>長按電源鍵大約10~15秒左右直至燈號熄滅</li>
+                    <li>確認所有燈號皆已熄滅</li>
+                </ol>
+            </div>
         </div>
     </div>
 </body>
