【系統安全 / 異動 / 介面】 將「近期更新」按鈕移除，該功能移架至 wordpress 愛學館購物車中

--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
         <div class="menu-bar">
             <img src="./img/im_logo_ transparent.png">
             <div class="buttonArea">
-                <button id="go-news">
-                    <i class='bx bx-news'></i>
-                    <p>近期更新</p>
-                </button>
                 <button id="go-home">
                     <i class='bx bx-home-alt'></i>
                     <p>返回主頁</p>
@@ -61,65 +57,8 @@
         </footer>
     </div>
 
-    <!-- 平常隱藏的更新彈窗 -->
-    <div id="newsItems" class="newsItems">
-        <div class="newsContent">
-            <div class="titleBar">
-                <i class='bx bx-left-arrow-alt' id="newsContent-close"></i>
-                <span class="titleText">
-                    <h2>學習王近期更新內容</h2>
-                </span>
-            </div>
-            <div class="contentItems" id="content-insert">
-                <div class="update-dateTime">發布日 : <span id="update-time-Text">2023.03.22</span></div>
-                <div class="items">
-                    <h3>萬試通軟體 -</h3>
-                    <ul>
-                        <li>
-                            <h4>主程式(萬試通) 1.1.44</h4>
-                            <p>- 使用會考模考考題後,學習診斷裡,沒有顯示相關使用紀錄。</p>
-                            <p>- 國中109學年康軒,八年級理化單元化學反應 診斷評量1-1質量守恆,要做測驗顯示無內容。</p>
-                        </li>
-                        <li>
-                            <h4>主程式(萬試通) 1.1.45</h4>
-                            <p>- 地科第五回 實戰模式 時間計時是錯的。</p>
-                            <p>- 數學輸出試卷會出現Typesetting math: 100% 擋住題目。</p>
-                        </li>
+    <!-- 平常隱藏的更新彈窗（開発中） -->
 
-                    </ul>
-                </div>
-
-                <div class="items">
-                    <h3>補教系統 -</h3>
-                    <ul>
-                        <li>
-                            <h4>NAS 1.43</h4>
-                            <p>隱藏補教系統行政人員中的 系統管理員User。</p>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="items">
-                    <h3>其他 -</h3>
-                    <ul>
-                        <li>
-                            <h4>NAS 1.42</h4>
-                            <p>資料庫系統更新及優化。</p>
-                        </li>
-
-                        <li>
-                            <h4>NAS 1.46</h4>
-                            <p>- NAS會從資料庫下載配合新的主程式(萬試通)1.1.44以後的dll。</p>
-                        </li>
-                        <li>
-                            <h4>NAS 1.48</h4>
-                            <p>優化軟體更新效能。</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
 </body>
 <script src="./App.js"></script>
 <script src="./news.js"></script>
