奧田 - 新增"NAS系統開容器 教學影片"以及"安裝/重裝學習王軟體 教學影片(原安裝軟體區域)" / 2024.01.03

--- a/support-conponent/study123.html
+++ b/support-conponent/study123.html
@@ -65,6 +65,9 @@
         <div class="ntroduce">請先下載 " IP找尋助手 "<a class="ntroduce-link"
                 href="https://global.synologydownload.com/download/Utility/Assistant/7.0.3-50049/Windows/synology-assistant-7.0.3-50049.exe?model=DS220%2B&bays=2&dsm_version=7.1.1&build_number=42962"
                 target="_blank">IP找尋助手 ( Synology Assistant_檔案大小: 10.2MB ) 下載</a></div>
+        <div class="ntroduce">或者是您也可以直接觀看 "教學影片"<a class="ntroduce-link" href="https://youtu.be/IXfPnnFkWYo"
+                target="_blank">NAS系統開容器 教學影片</a>
+        </div>
         <div class="imgItems">
             <div class="img-item">
                 <p><a href="https://youtu.be/aqv1bY7lNnI" target="_blank" class="webp-Youtube-Link"><img
@@ -76,7 +79,6 @@
                     <li>搜尋找到NAS主機名稱為「Study123」的NAS IP</li>
                 </ol>
             </div>
-
             <div class="img-item">
                 <p><a href="https://youtu.be/sFu5Ga1GgTY" target="_blank" class="webp-Youtube-Link"><img
                             src="./conponent/開啟容器.webp"></a>
@@ -94,11 +96,14 @@
     <div class="nextStep"><i class='bx bx-chevrons-down'></i></i></div>
 
     <div class="conponent" id="step4">
-        <div class="title">Step 4 安裝軟體</span></div>
+        <div class="title">Step 4 安裝/重裝軟體</span></div>
         <div class="ntroduce">請先下載 " Study123原始檔案 壓縮包 "<a class="ntroduce-link" href="https://reurl.cc/X5x69e"
                 target="_blank">Study123原始檔案 壓縮包 ( Study123壓縮包_檔案大小: 809MB ) 下載</a><a class="ntroduce-link"
                 href="https://tw.bandisoft.com/bandizip/" target="_blank">免費好用的解壓縮工具 (
                 BandZip_檔案大小: 6.89MB ) 下載</a>
+        </div>
+        <div class="ntroduce">或者是您也可以直接觀看 "教學影片"<a class="ntroduce-link" href="https://youtu.be/fMbDeselCko"
+                target="_blank">學習王安裝/重裝軟體 教學影片</a>
         </div>
         <div class="imgItems">
             <div class="img-item">
