奧田 - 【系統命名異動】 重新命名support-conponent 為 support 【新增】 針對安裝/重裝萬試通內新增 提示訊息

--- a/im-assistant.html
+++ b/im-assistant.html
@@ -16,7 +16,7 @@
     <title>金鑫愛學館技術支援 資訊助手</title>
     <link rel="icon" href="./img/mis_logo.png" type="image/x-icon" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="im-assistant.css">
 </head>
 
 <body>
@@ -27,8 +27,8 @@
             <img src="./img/im_logo_ transparent.png">
             <div class="buttonArea">
                 <button id="go-home">
-                    <i class='bx bx-home-alt'></i>
-                    <p>返回主頁</p>
+                    <i class='bx bx-reset'></i>
+                    <p>重設問題</p>
                 </button>
             </div>
         </div>
@@ -60,7 +60,6 @@
     <!-- 平常隱藏的更新彈窗（開発中） -->
 
 </body>
-<script src="./App.js"></script>
-<script src="./news.js"></script>
+<script src="./ImAssistantApp.js"></script>
 
 </html>
