--- a/support/study123.html
+++ b/support/study123.html
@@ -17,7 +17,7 @@
     <link rel="icon" href="../img/mis_logo.png" type="image/x-icon" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- <link rel="stylesheet" href="./im-support.css"> -->
-    <link rel="stylesheet" href="./conponentStyle.css">
+    <link rel="stylesheet" href="./study123.css">
 </head>
 
 <body>
@@ -97,6 +97,8 @@
 
     <div class="conponent" id="step4">
         <div class="title">Step 4 安裝/重裝軟體</span></div>
+        <div class="ntroduce" style="margin: auto; text-align: center; font-weight: bold;">
+            " 若是場館有隨身碟，可以直接複製正常電腦的study123資料夾到異常的電腦，這樣是最快速方便的方式 "</div>
         <div class="ntroduce">請先下載 " Study123原始檔案 壓縮包 "<a class="ntroduce-link" href="https://reurl.cc/X5x69e"
                 target="_blank">Study123原始檔案 壓縮包 ( Study123壓縮包_檔案大小: 809MB ) 下載</a><a class="ntroduce-link"
                 href="https://tw.bandisoft.com/bandizip/" target="_blank">免費好用的解壓縮工具 (
