【視覺優化】 UIUX調整更符合視覺習慣 【JS修正】 JS內的物件命名調整為小駝峰 【系統命名異動】 資料夾整合，正式將 資訊助手 轉移至 技術支援 的附屬功能

--- a/support/im-assistant.html
+++ b/support/im-assistant.html
@@ -16,7 +16,7 @@
     <title>金鑫愛學館技術支援 資訊助手</title>
     <link rel="icon" href="./img/mis_logo.png" type="image/x-icon" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="im-assistant.css">
+    <link rel="stylesheet" href="./css/im-assistant.css">
 </head>
 
 <body>
@@ -60,6 +60,8 @@
     <!-- 平常隱藏的更新彈窗（開発中） -->
 
 </body>
-<script src="./ImAssistantApp.js"></script>
+
+<!-- script -->
+<script src="./js/ImAssistantApp.js"></script>
 
 </html>
