--- a/support/study123.html
+++ b/support/study123.html
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="愛學館-官方技術支援">
     <meta name="author" content="學習王快速除錯">
-    <meta property="og:image" content="../img/mis_logo.png">
+    <meta property="og:image" content="./img/mis_logo.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="450">
     <meta property="og:image:height" content="450">
     <meta property="og:title" content="愛學館-官方技術支援">
     <meta property="og:description" content="學習王快速除錯">
     <title>金鑫教育愛學館 技術支援 NAS主機開關機</title>
-    <link rel="icon" href="../img/mis_logo.png" type="image/x-icon" />
+    <link rel="icon" href="./img/mis_logo.png" type="image/x-icon" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- <link rel="stylesheet" href="./im-support.css"> -->
-    <link rel="stylesheet" href="./study123.css">
+    <link rel="stylesheet" href="./css/study123.css">
 </head>
 
 <body>
