【系統命名異動】 因為github需要有一個index作為主業，因此將support資料夾中的檔案也全數移出，並移除了support資料夾

--- a/catgory_Study123.html
+++ b/catgory_Study123.html
@@ -22,7 +22,7 @@
 
 <body>
     <div class="title-bar">
-        <a href="./im-support.html"><i class='bx bx-arrow-back'></i></a>
+        <a href="./index.html"><i class='bx bx-arrow-back'></i></a>
         <h3 class="page-title">關於學習王NAS的一切設定跟安裝</h3>
     </div>
     <div class="conponent" id="step1">
