--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="conponent">
     <div class="title">學習王設定流程</div>
     <div class="items">
-      <a href="./study123.html" class="item-card"><i class='bx bx-cog'></i>設定流程
+      <a href="./catgory_Study123.html" class="item-card"><i class='bx bx-cog'></i>設定流程
         <div class="ntroduce">
           所有學習王的設定流程
         </div>
@@ -41,43 +41,43 @@
     </div>
     <div class="title">學習王 細項教學</div>
     <div class="items">
-      <a href="./study123.html#step1" class="item-card"><i class="bx bx-power-off"></i>NAS 主機開機
+      <a href="./catgory_Study123.html#step1" class="item-card"><i class="bx bx-power-off"></i>NAS 主機開機
         <div class="ntroduce">
           您必須將NAS主開機才能使用學習王
         </div>
       </a>
-      <a href="./study123.html#step3" class="item-card"><i class="bx bx-link"></i>獲取NAS IP
+      <a href="./catgory_Study123.html#step3" class="item-card"><i class="bx bx-link"></i>獲取NAS IP
         <div class="ntroduce">
           確認您的NAS IP進行萬試通設定
         </div>
       </a>
-      <a href="./study123.html#step3" class="item-card"><i class="bx bxl-docker"></i>容器開啟或關閉
+      <a href="./catgory_Study123.html#step3" class="item-card"><i class="bx bxl-docker"></i>容器開啟或關閉
         <div class="ntroduce">
           開啟容器萬事通才有資料庫能儲存學生帳號以及抓取學習王影片
         </div>
       </a>
-      <a href="./study123.html#step5" class="item-card"><i class="bx bx-food-menu"></i>進入補教系統
+      <a href="./catgory_Study123.html#step5" class="item-card"><i class="bx bx-food-menu"></i>進入補教系統
         <div class="ntroduce">
           進入補教系統新增或檢視學員帳號
         </div>
       </a>
-      <a href="./study123.html#step5" class="item-card"><i class="bx bx-user"></i>新增學員帳號
+      <a href="./catgory_Study123.html#step5" class="item-card"><i class="bx bx-user"></i>新增學員帳號
         <div class="ntroduce">
           新增學生帳號用來登入萬試通系統
         </div>
       </a>
-      <a href="./study123.html#step4" class="item-card"><i class="bx bx-download"></i>重新安裝新軟體
+      <a href="./catgory_Study123.html#step4" class="item-card"><i class="bx bx-download"></i>重新安裝新軟體
         <div class="ntroduce">
           當您的軟體被學生刪除，或少數幾台電腦無法使用時可以透過該教學進行重新安裝
         </div>
       </a>
-      <a href="./study123.html#step4" class="item-card"><i class="bx bx-info-circle"></i>config.txt
+      <a href="./catgory_Study123.html#step4" class="item-card"><i class="bx bx-info-circle"></i>config.txt
         的IP更換
         <div class="ntroduce">
           您的萬試通下載下來之後沒有改這邊的IP依然無法正常登入
         </div>
       </a>
-      <a href="./study123.html#overlist01" class="item-card"><i class='bx bx-power-off'></i>遇到停電需要關機
+      <a href="./catgory_Study123.html#overlist01" class="item-card"><i class='bx bx-power-off'></i>遇到停電需要關機
         <div class="ntroduce">
           當您收到停電通知，您需要關閉NAS主機避免資料庫損毀
         </div>
