【視覺優化】 UIUX調整更符合視覺習慣

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
           您的萬試通下載下來之後沒有改這邊的IP依然無法正常登入
         </div>
       </a>
-      <a href="./catgory_Study123.html#overlist01" class="item-card"><i class='bx bx-power-off'></i>遇到停電需要關機
+      <a href="./catgory_Study123.html#overlist01" class="item-card"><i class='bx bx-power-off'></i>停電前的NAS關機
         <div class="ntroduce">
-          當您收到停電通知，您需要關閉NAS主機避免資料庫損毀
+          當您收到停電通知，您務必關閉NAS主機避免資料庫損毀
         </div>
       </a>
     </div>
