--- a/catgory_Study123.html
+++ b/catgory_Study123.html
@@ -200,7 +200,7 @@
 
 
     <div class="conponent" id="overlist01">
-        <div class="title">其他: 遇到停電需要關機</span></div>
+        <div class="title">其他: 停電前的NAS關機</span></div>
         <div class="ntroduce">避免資料庫中途因斷電導致損毀</div>
         <div class="ntroduce">請先下載 " IP找尋助手 "<a class="ntroduce-link"
                 href="https://global.synologydownload.com/download/Utility/Assistant/7.0.3-50049/Windows/synology-assistant-7.0.3-50049.exe?model=DS220%2B&bays=2&dsm_version=7.1.1&build_number=42962"
