【系統命名異動】 修正im-assistant.html為assistant.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h3 class="page-title"> 技術支援首頁</h3>
     </div>
     <foorter class="footer-bar">
-      <a href="./im-assistant.html"><i class="bx bx-compass"></i>資訊助手</a>
+      <a href="./assistant.html"><i class="bx bx-compass"></i>資訊助手</a>
       <a href="https://hackmd.io/@eduone-imstudy-MIS/rJHyKhJ6s"><i class="bx bx-receipt"></i>回到舊版</a>
     </foorter>
   </div>
