【視覺優化】 CSS調整，並因應新年開始，版權文字更新為2024版且加入 By MIS 字樣 【系統命名異動】 統整img及webp還有mp4資料夾，拋棄conponent資料夾，建立media資料夾，將所有影音檔轉存至media

--- a/assistant.html
+++ b/assistant.html
@@ -7,16 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="愛學館-資訊助手">
     <meta name="author" content="學習王快速除錯引導">
-    <meta property="og:image" content="./img/mis_logo.png">
+    <meta property="og:image" content="./media/img/logo/mis_logo.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="450">
     <meta property="og:image:height" content="450">
     <meta property="og:title" content="愛學館-資訊助手">
     <meta property="og:description" content="學習王快速除錯引導">
     <title>金鑫愛學館技術支援 資訊助手</title>
-    <link rel="icon" href="./img/mis_logo.png" type="image/x-icon" />
+    <link rel="icon" href="./media/img/logo/mis_logo.png" type="image/x-icon" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="./css/im-assistant.css">
 </head>
 
 <body>
@@ -24,7 +23,7 @@
     <!-- menu title -->
     <div class="group-box">
         <div class="menu-bar">
-            <img src="./img/im_logo_ transparent.png">
+            <img src="./media/img/logo/im_logo_ transparent.png">
             <div class="buttonArea">
                 <button id="go-home">
                     <i class='bx bx-reset'></i>
@@ -53,7 +52,7 @@
             </div>
         </div>
         <footer>
-            <p class="company-footer">Copyright © 2023 EduOne Co.Ltd. All Rights Reserved</p>
+            <p class="company-footer">Copyright © 2024 EduOne Co.Ltd. All Rights Reserved. By MIS</p>
         </footer>
     </div>
 
@@ -61,6 +60,8 @@
 
 </body>
 
+<!-- css -->
+<link rel="stylesheet" href="./css/assistant.css">
 <!-- script -->
 <script src="./js/ImAssistantApp.js"></script>
 
