--- a/category_Study123.html
+++ b/category_Study123.html
@@ -7,17 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="愛學館-官方技術支援">
     <meta name="author" content="學習王快速除錯">
-    <meta property="og:image" content="./img/mis_logo.png">
+    <meta property="og:image" content="./media/img/logo/mis_logo.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="450">
     <meta property="og:image:height" content="450">
     <meta property="og:title" content="愛學館-官方技術支援">
     <meta property="og:description" content="學習王快速除錯">
     <title>金鑫教育愛學館 技術支援 NAS主機開關機</title>
-    <link rel="icon" href="./img/mis_logo.png" type="image/x-icon" />
+    <link rel="icon" href="./media/img/logo/mis_logo.png" type="image/x-icon" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- <link rel="stylesheet" href="./im-support.css"> -->
-    <link rel="stylesheet" href="./css/study123.css">
 </head>
 
 <body>
@@ -39,7 +38,7 @@
         <div class="ntroduce">確認disk燈號以及lan網孔的燈號皆呈現綠色閃爍</div>
         <div class="imgItems">
             <div class="img-item">
-                <p><img src="./conponent/開機.webp">
+                <p><img src="./media/開機.webp">
                     <span class="title">開機</span>
                 </p>
                 <ol class="text-items">
@@ -47,7 +46,7 @@
                 </ol>
             </div>
             <div class="img-item">
-                <p><img src="./conponent/燈號(正常).webp">
+                <p><img src="./media/燈號(正常).webp">
                     <span class="title">確認燈號</span>
                 </p>
                 <ol class="text-items">
@@ -71,7 +70,7 @@
         <div class="imgItems">
             <div class="img-item">
                 <p><a href="https://youtu.be/aqv1bY7lNnI" target="_blank" class="webp-Youtube-Link"><img
-                            src="./conponent/IP搜尋.webp"></a>
+                            src="./media/IP搜尋.webp"></a>
                     <span class="title">使用Assistant找尋您的IP</span>
                 </p>
                 <ol class="text-items">
@@ -81,7 +80,7 @@
             </div>
             <div class="img-item">
                 <p><a href="https://youtu.be/sFu5Ga1GgTY" target="_blank" class="webp-Youtube-Link"><img
-                            src="./conponent/開啟容器.webp"></a>
+                            src="./media/開啟容器.webp"></a>
                     <span class="title">開啟NAS管理系統中的容器</span>
                 </p>
                 <ol class="text-items">
@@ -110,7 +109,7 @@
         <div class="imgItems">
             <div class="img-item">
                 <p><a href="https://youtu.be/dHpuw9ItrlE" target="_blank" class="webp-Youtube-Link"><img
-                            src="./conponent/解壓縮.webp"></a>
+                            src="./media/解壓縮.webp"></a>
                     <span class="title">解壓縮軟體包</span>
                 </p>
                 <ol class="text-items">
@@ -122,7 +121,7 @@
 
             <div class="img-item">
                 <p><a href="https://youtu.be/0OebNx3xZYw" target="_blank" class="webp-Youtube-Link"><img
-                            src="./conponent/configIP.webp"></a>
+                            src="./media/configIP.webp"></a>
                     <span class="title">修改config.txt的IP</span>
                 </p>
                 <ol class="text-items">
@@ -134,7 +133,7 @@
 
             <div class="img-item">
                 <p><a href="https://youtu.be/tdnXiauZfRU" target="_blank" class="webp-Youtube-Link"><img
-                            src="./conponent/建立捷徑.webp"></a>
+                            src="./media/建立捷徑.webp"></a>
                     <span class="title">在桌面建立萬試通捷徑</span>
                 </p>
                 <ol class="text-items">
@@ -157,7 +156,7 @@
         <div class="imgItems">
             <div class="img-item">
                 <p><a href="https://youtu.be/bogJYDmVshI" target="_blank" class="webp-Youtube-Link"><img
-                            src="./conponent/登入補教系統.webp"></a>
+                            src="./media/登入補教系統.webp"></a>
                     <span class="title">登入補教系統</span>
                 </p>
                 <ol class="text-items">
@@ -168,7 +167,7 @@
 
             <div class="img-item">
                 <p><a href="https://youtu.be/f3KObkTL-RU" target="_blank" class="webp-Youtube-Link"><img
-                            src="./conponent/補教新增帳號.webp"></a>
+                            src="./media/補教新增帳號.webp"></a>
                     <span class="title">新增 - 學員帳號</span>
                 </p>
                 <ol class="text-items">
@@ -181,7 +180,7 @@
 
             <div class="img-item">
                 <p><a href="https://youtu.be/d1ZrSxhL6lE" target="_blank" class="webp-Youtube-Link"><img
-                            src="./conponent/補教檢視帳號.webp"></a>
+                            src="./media/補教檢視帳號.webp"></a>
                     <span class="title">檢視 - 學員帳號</span>
                 </p>
                 <ol class="text-items">
@@ -208,7 +207,7 @@
         <div class="imgItems">
             <div class="img-item">
                 <p><a href="https://youtu.be/aqv1bY7lNnI" target="_blank" class="webp-Youtube-Link"><img
-                            src="./conponent/IP搜尋.webp"></a>
+                            src="./media/IP搜尋.webp"></a>
                     <span class="title">使用Assistant找尋您的IP</span>
                 </p>
                 <ol class="text-items">
@@ -218,7 +217,7 @@
             </div>
             <div class="img-item">
                 <p><a href="https://youtu.be/sFu5Ga1GgTY" target="_blank" class="webp-Youtube-Link"><img
-                            src="./conponent/開啟容器.webp"></a>
+                            src="./media/開啟容器.webp"></a>
                     <span class="title">關閉NAS管理系統中的容器</span>
                 </p>
                 <ol class="text-items">
@@ -229,7 +228,7 @@
                 </ol>
             </div>
             <div class="img-item">
-                <p><img src="./conponent/關機.webp">
+                <p><img src="./media/關機.webp">
                     <span class="title">關機</span>
                 </p>
                 <ol class="text-items">
@@ -240,6 +239,12 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p class="company-footer">Copyright © 2024 EduOne Co.Ltd. All Rights Reserved. By MIS</p>
+    </footer>
 </body>
+
+<!-- css -->
+<link rel="stylesheet" href="./css/category_Study123.css">
 
 </html>
