--- a/index.html
+++ b/index.html
@@ -7,22 +7,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="愛學館-官方技術支援">
   <meta name="author" content="學習王快速除錯">
-  <meta property="og:image" content="./img/mis_logo.png">
+  <meta property="og:image" content="./media/img/logo/mis_logo.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="450">
   <meta property="og:image:height" content="450">
   <meta property="og:title" content="愛學館-官方技術支援">
   <meta property="og:description" content="學習王快速除錯">
   <title>金鑫教育愛學館 技術支援首頁</title>
-  <link rel="icon" href="./img/mis_logo.png" type="image/x-icon" />
+  <link rel="icon" href="./media/img/logo/mis_logo.png" type="image/x-icon" />
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="./css/im-support.css" />
 </head>
 
 <body>
   <div class="title-bar">
     <div class="name-area">
-      <img src="./img/im_logo_ transparent.png" class="logo">
+      <img src="./media/img/logo/im_logo_ transparent.png" class="logo">
       <h3 class="page-title"> 技術支援首頁</h3>
     </div>
     <foorter class="footer-bar">
@@ -33,7 +32,7 @@
   <div class="conponent">
     <div class="title">學習王設定流程</div>
     <div class="items">
-      <a href="./catgory_Study123.html" class="item-card"><i class='bx bx-cog'></i>設定流程
+      <a href="./category_Study123.html" class="item-card"><i class='bx bx-cog'></i>設定流程
         <div class="ntroduce">
           所有學習王的設定流程
         </div>
@@ -41,43 +40,43 @@
     </div>
     <div class="title">學習王 細項教學</div>
     <div class="items">
-      <a href="./catgory_Study123.html#step1" class="item-card"><i class="bx bx-power-off"></i>NAS 主機開機
+      <a href="./category_Study123.html#step1" class="item-card"><i class="bx bx-power-off"></i>NAS 主機開機
         <div class="ntroduce">
           您必須將NAS主開機才能使用學習王
         </div>
       </a>
-      <a href="./catgory_Study123.html#step3" class="item-card"><i class="bx bx-link"></i>獲取NAS IP
+      <a href="./category_Study123.html#step3" class="item-card"><i class="bx bx-link"></i>獲取NAS IP
         <div class="ntroduce">
           確認您的NAS IP進行萬試通設定
         </div>
       </a>
-      <a href="./catgory_Study123.html#step3" class="item-card"><i class="bx bxl-docker"></i>容器開啟或關閉
+      <a href="./category_Study123.html#step3" class="item-card"><i class="bx bxl-docker"></i>容器開啟或關閉
         <div class="ntroduce">
           開啟容器萬事通才有資料庫能儲存學生帳號以及抓取學習王影片
         </div>
       </a>
-      <a href="./catgory_Study123.html#step5" class="item-card"><i class="bx bx-food-menu"></i>進入補教系統
+      <a href="./category_Study123.html#step5" class="item-card"><i class="bx bx-food-menu"></i>進入補教系統
         <div class="ntroduce">
           進入補教系統新增或檢視學員帳號
         </div>
       </a>
-      <a href="./catgory_Study123.html#step5" class="item-card"><i class="bx bx-user"></i>新增學員帳號
+      <a href="./category_Study123.html#step5" class="item-card"><i class="bx bx-user"></i>新增學員帳號
         <div class="ntroduce">
           新增學生帳號用來登入萬試通系統
         </div>
       </a>
-      <a href="./catgory_Study123.html#step4" class="item-card"><i class="bx bx-download"></i>重新安裝新軟體
+      <a href="./category_Study123.html#step4" class="item-card"><i class="bx bx-download"></i>重新安裝新軟體
         <div class="ntroduce">
           當您的軟體被學生刪除，或少數幾台電腦無法使用時可以透過該教學進行重新安裝
         </div>
       </a>
-      <a href="./catgory_Study123.html#step4" class="item-card"><i class="bx bx-info-circle"></i>config.txt
+      <a href="./category_Study123.html#step4" class="item-card"><i class="bx bx-info-circle"></i>config.txt
         的IP更換
         <div class="ntroduce">
           您的萬試通下載下來之後沒有改這邊的IP依然無法正常登入
         </div>
       </a>
-      <a href="./catgory_Study123.html#overlist01" class="item-card"><i class='bx bx-power-off'></i>停電前的NAS關機
+      <a href="./category_Study123.html#overlist01" class="item-card"><i class='bx bx-power-off'></i>停電前的NAS關機
         <div class="ntroduce">
           當您收到停電通知，您務必關閉NAS主機避免資料庫損毀
         </div>
@@ -126,6 +125,12 @@
       </a>
     </div>
   </div>
+  <footer>
+    <p class="company-footer">Copyright © 2024 EduOne Co.Ltd. All Rights Reserved. By MIS</p>
+  </footer>
 </body>
+
+<!-- css -->
+<link rel="stylesheet" href="./css/index.css" />
 
 </html>
